# mipt-db-hw-5

./: README.md  hw5.ipynb  pyproject.toml
